src/features/home/About.module.css
#categories {
  padding: 40px 100px;
  display: flex;
  flex-wrap: wrap;     /* Wrap to next line if screen is small */
  gap: 15px;
  justify-content: center;
}

.banners {
  width: 100%;
  max-width: 500px;
  height: auto;
  border-radius: 8px;
  transition: transform 0.2s;
}

@media (min-width: 768px) {
  .banners {
    width: 45%;
  }
}

.banners:hover {
  transform: scale(1.05);
  cursor: pointer;
}

#sales {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: center; 
  padding: 40px 20px;
}

